# elyir-robotix

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
drive_firmware/: platformio.ini
drive_firmware/lib/Config/: Config.h
drive_firmware/lib/Logger/: Logger.cpp  Logger.h
drive_firmware/lib/MotionManager/: MotionManager.cpp  MotionManager.h
drive_firmware/lib/PowerManager/: PowerManager.cpp  PowerManager.h
drive_firmware/lib/RosNodeManager/: RosNodeManager.cpp  RosNodeManager.h
drive_firmware/lib/SonarManager/: SonarManager.cpp  SonarManager.h
drive_firmware/lib/ToneManager/: Melody.h  Notes.h  ToneManager.cpp  ToneManager.h
drive_firmware/msg/: status.msg
drive_firmware/src/: main.cpp
launch/: cmd_vel_mux.launch  drive.launch  drive_teleop.launch  simple_drive.launch
msg/: power_status.msg
nodes/: cmd_vel_mux  drive_teleop  simple_drive
src/drive/: simple_drive.py
