<package>
  <name>ros_roboix</name>
  <version>0.1.0</version>
  <description>
      A robotic system based on ROS and Arduino.
  </description>
  <maintainer email="temi.adeyeri@gmail.com">Temi Adeyeri</maintainer>
  <author email="temi.adeyeri@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">www.elyir.com</url>
  <url type="repository">https://github.com/topeysoft/elyir</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
